--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "prisma": "^5.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
