--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@t3-oss/env-nextjs": "^0.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.7.3",
     "gsap": "^3.12.7",
     "lucia": "^3.2.2",
@@ -33,8 +37,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "sonner": "^2.0.3",
+    "stripe": "^18.1.0",
     "tailwind-merge": "^3.2.0",
-    "zod": "^3.24.3"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
